--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,8 @@
 set -g buffer-limit 20                   # Increase buffer size
 set -g history-limit 50000               # Bigger history
 set -g escape-time 5                     # No escape time for vi mode
-set -g default-terminal screen-256color  # Default termtype. If the rcfile sets $TERM, that overrides this value.
+set -g default-terminal tmux-256color    # Default termtype. If the rcfile sets $TERM, that overrides this value.
+set -as terminal-features ',*:RGB'
 
 # Session options
 set -g base-index 1                      # set first window to index 1 (not 0)
@@ -199,6 +200,11 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \;\
 # --------------------------------------------
 # ---------------- Appearance ----------------
 # --------------------------------------------
+
+# Force tmux panes to paint their background (prevents iTerm2 window tinting)
+set -g window-style "bg=#002b36"
+set -g window-active-style "bg=#002b36"
+
 # General status bar settings
 set -g status on
 set -g status-interval 15
@@ -206,32 +212,34 @@ set -g status-position bottom
 set -g status-justify centre
 
 # Message
-set -g message-style "fg=colour8,bg=colour3,bold"
+set -g message-style "fg=#002b36,bg=colour3,bold"
 
 # Basic status bar colors
-set -g status-bg "colour8"
+#set -g status-bg "colour8"
+set -g status-bg "#002b36"
 set -g status-fg colour12
 
 # Define widgets
-wg_session="#[fg=colour8,bg=colour14]  #[fg=colour14,bg=colour3]#[fg=colour8,bg=colour3] 󰇄 #(hostname -s) #[fg=colour3,bg=colour8]     #{prefix_highlight}"
+wg_session="#[fg=#002b36,bg=colour14]  #[fg=colour14,bg=colour3]#[fg=#002b36,bg=colour3] 󰇄 #(hostname -s) #[fg=colour3,bg=#002b36]     #{prefix_highlight}"
 wg_zoom="#{?window_zoomed_flag,#[fg=colour15],}"
-wg_date="#[fg=colour2,bg=colour14]#[fg=colour8,bg=colour2]   %d-%b-%y"
-wg_time="#[fg=colour14,bg=colour8]#[fg=colour8,bg=colour14]  %H:%M"
+wg_date="#[fg=colour2,bg=colour14]#[fg=#002b36,bg=colour2]   %d-%b-%y"
+wg_time="#[fg=colour14,bg=#002b36]#[fg=#002b36,bg=colour14]  %H:%M"
 wg_music="#{now_playing}"
-wg_battery="#{battery_color_bg}#[fg=colour14,bg=colour8]#{battery_icon_status} #{battery_icon_charge} "
-wg_system_load="#[fg=colour14,bg=colour8]#(tmux-mem-cpu-load --interval 1 --averages-count 0 --mem-mode 1 --cpu-mode 0 --graph-lines 6)"
+wg_battery="#{battery_color_bg}#[fg=colour14,bg=#002b36]#{battery_icon_status} #{battery_icon_charge} "
+wg_system_load="#[fg=colour14,bg=#002b36]#(tmux-mem-cpu-load --interval 2 --averages-count 0 --mem-mode 1 --cpu-mode 0 --graph-lines 6)"
 wg_is_keys_off="#[fg=colour15,bg=colour1]#([ $(tmux show-option -qv key-table) = 'off' ] && echo ' OFF ')#[default]"
-wg_window_left="#[fg=colour4,bg=colour8]#[fg=colour8,bg=colour4,noreverse,bold]"
-wg_window_right="#[fg=colour4,bg=colour8,nobold]"
+wg_window_left="#[fg=colour4,bg=#002b36]#[fg=#002b36,bg=colour4,noreverse,bold]"
+wg_window_right="#[fg=colour4,bg=#002b36,nobold]"
 wg_window="#{pane_current_path}"
 
-# Lef side of status bar
+# Left side of status bar
 set -g status-left-length 52
 set -g status-left "$wg_session     $wg_is_keys_off"
 
 # Right side of status bar
 set -g status-right-length 500
-set -g status-right-style "bg=colour8,fg=colour12"
+#set -g status-right-style "bg=colour8,fg=colour12"
+set -g status-right-style "bg=#002b36,fg=colour12"
 set -g status-right "$wg_battery $wg_system_load $wg_time $wg_date$wg_music  "
 
 # Window status
@@ -240,11 +248,11 @@ set -g window-status-current-format "$wg_window_left$wg_zoom   $wg_window | #
 
 # Activity window
 setw -g window-status-activity-style reverse
-setw -g window-status-activity-style bg="colour8",fg="colour9"
+setw -g window-status-activity-style bg="#002b36",fg="colour9"
 
 # Window panes
-set -g pane-border-style fg=colour12
-set -g pane-active-border-style fg=colour4
+set -g pane-border-style bg=default
+set -g pane-active-border-style bg=default
 
 # Configure tmux-prefix-highlight colors
 set -g @prefix_highlight_fg "colour8"
